<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.pruffap.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/phone_txt"
            android:layout_below="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Phone"
            android:textColor="#A09D9D"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>



        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_below="@+id/phone_txt"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:textColor="#A09D9D"
            android:textSize="15sp"
            android:background="@drawable/spinner_style"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/email_txt"
            android:layout_below="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailIdRegister"
            android:textColor="#A09D9D"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>


        <EditText
            android:id="@+id/Email"
            android:layout_below="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:textColor="#A09D9D"
            android:textSize="15sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/spinner_style"
            android:inputType="textEmailAddress"/>





        <Button
            android:id="@+id/final_next"
            android:layout_below="@+id/Email"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:background="@drawable/btn_style"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="15dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>


</RelativeLayout>