<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:id="@+id/rel_lay_1"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/pruff_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/pruff"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"/>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rel_lay_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pruff_logo">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_below="@+id/login_text"
            android:id="@+id/lin_lay_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-medium"/>
                
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColor="#A9A9A9"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:background="@drawable/edtext_style"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:textColor="#A9A9A9"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:inputType="textPassword"
                    android:background="@drawable/edtext_style"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_below="@+id/lin_lay_1"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:background="@drawable/btn_style"
            android:fontFamily="sans-serif-medium"
            android:textColor="#000000"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"/>

        </RelativeLayout>



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_lay_3"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/signUP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/sign_up"
            android:fontFamily="sans-serif"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/forgot_pass"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif"
            android:textColor="#000000"/>

    </RelativeLayout>

</RelativeLayout>