<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.pruffap.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/about_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/about_desc"
            android:layout_below="@+id/about_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_desc"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="#A09D9D"
            android:gravity="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_desc"
            android:layout_marginTop="30dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

        <LinearLayout
            android:id="@+id/parent_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/child_lin_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstName"
                    android:fontFamily="sans-serif"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />
                <EditText
                    android:id="@+id/firName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/spinner_style"/>



            </LinearLayout>
            <LinearLayout
            android:id="@+id/child_lin_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genSpinTitle"
                android:fontFamily="sans-serif"
                android:textColor="#A09D9D"
                android:textSize="15sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
            />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_style" />


        </LinearLayout>
            <LinearLayout
                android:id="@+id/child_lin_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cityNames"
                    android:fontFamily="sans-serif"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />
                <EditText
                    android:id="@+id/city_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/spinner_style"/>



            </LinearLayout>
            <LinearLayout
                android:id="@+id/child_lin_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mother"
                    android:fontFamily="sans-serif"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />

                <Spinner
                    android:id="@+id/mother_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_style" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/child_lin_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mobile"
                    android:fontFamily="sans-serif"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />
                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/spinner_style"/>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/child_lin_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequent"
                    android:fontFamily="sans-serif"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />

                <Spinner
                    android:id="@+id/frequent_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/spinner_style" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/child_lin_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Imei"
                    android:fontFamily="sans-serif"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />
                <EditText
                    android:id="@+id/imei"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#A09D9D"
                    android:textSize="15sp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/spinner_style"/>



            </LinearLayout>


            <Button
                android:id="@+id/about_next"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/btn_style"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="15dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>




    </ScrollView>

    </RelativeLayout>


</RelativeLayout>